build chain fixes, window executable added and some bugs fixed.